--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cut. Jobs - Find Your Next Career Opportunity!</title>
+    <title>Home Jobs - Find Your Next Career Opportunity!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="/css/style.css"/>
+
+    <script scr="/js/main.js" type="module"></script>
 </head>
 <body>
     <header>
         <div class="header-left">
-            <h1>Indiana Jobs - Find Your Next Career Opportunity!</h1>
+            <h1>Cut. Jobs - Find Your Next Career Opportunity!</h1>
         </div>
         <div class="header-right">
             <div class="icon-button">
-                <svg aria-label="User" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-1.1 0-1.99.01-2 .01V22h4v-7.99c-.01 0-.9-.01-2-.01z"/>
+                <svg aria-label="User" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M4 22C4 17.5817 7.58172 14 12 14C16.4183 14 20 17.5817 20 22H18C18 18.6863 15.3137 16 12 16C8.68629 16 6 18.6863 6 22H4ZM12 13C8.685 13 6 10.315 6 7C6 3.685 8.685 1 12 1C15.315 1 18 3.685 18 7C18 10.315 15.315 13 12 13ZM12 11C14.21 11 16 9.21 16 7C16 4.79 14.21 3 12 3C9.79 3 8 4.79 8 7C8 9.21 9.79 11 12 11Z"/>
                 </svg>
             </div>
             <div class="icon-button">
